<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/themes"
        android:icon="@drawable/themes"
        android:title="@string/themes"
        />
    <item
        android:id="@+id/account"
        android:icon="@drawable/account"
        android:title="@string/account"
        />
    <item
        android:id="@+id/cloud"
        android:icon="@drawable/cloud"
        android:title="@string/cloud"
        />
    <item
        android:id="@+id/update"
        android:icon="@drawable/update"
        android:title="@string/update"
        />
    <item
        android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="@string/about"
        />
    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/help"
        />
</menu>