<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title"
        android:background="@color/color1"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="@dimen/head2"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="@string/user_info"
            android:textSize="@dimen/head4"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/avatar"
            android:src="@drawable/default_avatar"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="@string/theme_color"
            android:textSize="@dimen/head4"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/themeColor"
            android:background="@color/color1"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="@string/cloud_status"
            android:textSize="@dimen/head4"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/cloudStatus"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="@string/software_version"
            android:textSize="@dimen/head4"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/softwareVersion"
            android:text="@string/version"
            android:textSize="@dimen/head4"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="@string/check_update"
            android:textSize="@dimen/head4"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="@string/about"
            android:textSize="@dimen/head4"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>