<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:src="@drawable/back"
            android:layout_width="@dimen/bar_icon"
            android:layout_height="@dimen/bar_icon"/>
        <TextView
            android:text="@string/register_account"
            android:textColor="@color/white"
            android:textSize="@dimen/head3"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.appbar.MaterialToolbar>
    <ImageView
        android:id="@+id/avatarIcon"
        android:src="@drawable/camera"
        android:background="@drawable/round_stroke"
        android:backgroundTint="@color/color1"
        android:padding="20dp"
        android:layout_width="@dimen/logo"
        android:layout_height="@dimen/logo"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/usernameInput"
        android:hint="@string/name_hint"
        android:textSize="@dimen/body1"
        android:background="@drawable/login_edit_text_shape"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/person"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/avatarIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/passwordInput"
        android:hint="@string/password_hint"
        android:textSize="@dimen/body1"
        android:background="@drawable/login_edit_text_shape"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/usernameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/emailInput"
        android:hint="@string/email_hint"
        android:textSize="@dimen/body1"
        android:background="@drawable/login_edit_text_shape"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/phoneInput"
        android:hint="@string/phone_hint"
        android:textSize="@dimen/body1"
        android:background="@drawable/login_edit_text_shape"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/codeInput"
        android:hint="@string/code_hint"
        android:textSize="@dimen/body1"
        android:background="@drawable/login_edit_text_shape"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/message"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/phoneInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:text="@string/require_code"
        android:textColor="@color/white"
        android:textSize="@dimen/body2"
        android:background="@drawable/login_button_shape"
        android:backgroundTint="@color/color1"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/codeInput"
        app:layout_constraintEnd_toEndOf="@id/codeInput"
        app:layout_constraintBottom_toBottomOf="@id/codeInput"
        />
    <Button
        android:id="@+id/register"
        android:text="@string/register"
        android:textSize="@dimen/body1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/login_button_shape"
        android:backgroundTint="@color/color1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/codeInput"
        app:layout_constraintEnd_toEndOf="@id/codeInput"
        app:layout_constraintTop_toBottomOf="@id/codeInput"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.2"
        />
</androidx.constraintlayout.widget.ConstraintLayout>