<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/searchBar"
        android:orientation="horizontal"
        android:background="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        >
        <EditText
            android:id="@+id/searchEditText"
            android:hint="@string/search_hint"
            android:textSize="@dimen/body1"
            android:background="@drawable/login_edit_text_shape"
            android:layout_marginVertical="12dp"
            android:layout_marginHorizontal="20dp"
            android:paddingStart="15dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            />
        <TextView
            android:id="@+id/searchButton"
            android:text="@string/search_hint"
            android:textSize="@dimen/head3"
            android:textColor="@color/white"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/searchTabLayout"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabIndicatorHeight="5dp"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorColor="@color/color1"
        app:tabTextAppearance="@style/Theme.MobileScanner.TabLayout"
        app:tabRippleColor="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        >
        <com.google.android.material.tabs.TabItem
            android:text="@string/project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.tabs.TabItem
            android:text="@string/community"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.tabs.TabItem
            android:text="@string/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/searchViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/searchTabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>