<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_login.ui.LoginFragment"
    android:background="@color/white"
    >
    <TextView
        android:id="@+id/name"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/head1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo"
        android:src="@drawable/mobile_scanner"
        android:background="@color/white"
        android:layout_width="@dimen/logo"
        android:layout_height="@dimen/logo"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        />
    <EditText
        android:id="@+id/account"
        android:textSize="@dimen/body1"
        android:hint="@string/account"
        android:maxLines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/login_edit_text_shape"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintTop_toBottomOf="@id/logo"
        />
    <EditText
        android:id="@+id/password"
        android:textSize="@dimen/body1"
        android:hint="@string/password"
        android:maxLines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/login_edit_text_shape"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintTop_toBottomOf="@id/account"
        />
    <LinearLayout
        android:id="@+id/panel"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"
        >
        <CheckBox
            android:id="@+id/remPassword"
            android:text="@string/remember_password"
            android:button="@drawable/check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/autoLogin"
            android:text="@string/auto_login"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:button="@drawable/check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/register"
        android:text="@string/register"
        android:textSize="@dimen/body1"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/login_button_shape"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/panel"
        />
    <TextView
        android:id="@+id/login"
        android:text="@string/login"
        android:textSize="@dimen/body1"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/login_button_shape"
        android:backgroundTint="@color/color1"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintTop_toTopOf="@id/register"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.20"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintGuide_percent="0.85"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintGuide_percent="0.1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintGuide_percent="0.9"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintGuide_percent="0.5"
        />
</androidx.constraintlayout.widget.ConstraintLayout>