<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/layer"
        android:background="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:id="@+id/cancel"
        android:src="@drawable/cancel"
        android:layout_width="@dimen/bar_icon"
        android:layout_height="@dimen/bar_icon"
        android:padding="3dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/layer"
        />
    <ImageView
        android:id="@+id/save"
        android:src="@drawable/done"
        android:layout_width="@dimen/bar_icon"
        android:layout_height="@dimen/bar_icon"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/layer"
        />
    <TextView
        android:id="@+id/titleText"
        android:text="@string/note"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/head1"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="@id/save"
        app:layout_constraintTop_toTopOf="@id/layer"
        app:layout_constraintBottom_toBottomOf="@id/layer"
        />
    <EditText
        android:id="@+id/title"
        android:hint="@string/title_hint"
        android:textSize="@dimen/head2"
        android:textColor="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/layer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/body"
        android:hint="@string/content_hint"
        android:textSize="@dimen/head3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:layout_marginHorizontal="15dp"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>