<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@color/color1"
    >
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cardAvatar"
        android:src="@drawable/default_avatar"
        android:background="@color/black"
        android:layout_width="@dimen/bar_avatar"
        android:layout_height="@dimen/bar_avatar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/userName"
        android:textSize="@dimen/body1"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/cardAvatar"
        app:layout_constraintStart_toEndOf="@id/cardAvatar"
        />
    <TextView
        android:id="@+id/userIdText"
        android:textSize="@dimen/body2"
        android:text="@string/user_id"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintStart_toStartOf="@id/userName"
        />
    <TextView
        android:id="@+id/userId"
        android:textSize="@dimen/body2"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintStart_toEndOf="@id/userIdText"
        />
    <TextView
        android:id="@+id/cloudUsedText"
        android:textColor="@color/white"
        android:textSize="@dimen/body1"
        android:layout_marginTop="20dp"
        android:text="@string/cloud_used_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/border"
        app:layout_constraintStart_toStartOf="@id/cardAvatar"
        />
    <TextView
        android:id="@+id/usedSpace"
        android:text="0G/100G"
        android:textSize="@dimen/large_number"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/cloudUsedText"
        app:layout_constraintStart_toStartOf="@id/border"
        app:layout_constraintEnd_toEndOf="@id/border"
        />
    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/rectangle_stroke"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cardAvatar"
        />
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        app:menu="@menu/drawer_menu"
        app:elevation="0dp"
        android:background="@color/color1"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/border"
        />
</androidx.constraintlayout.widget.ConstraintLayout>